Adds namespace static configuration
Co-authored-by: Jack Green <jack.green@hazelcast.com>
Co-authored-by: James Holgate <james.holgate@hazelcast.com>
Co-authored-by: Gareth Johnston <gareth.johnston@hazelcast.com>